// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<IconSearch /> DOM element add "id" attribute to DOM element 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c"
    height="1em"
    id="hasId"
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M154.4 59.7c-25.6-25.6-67.1-25.6-92.8 0s-25.6 67.1 0 92.8c23 23 58.8 25.3 84.5 7l52.2 52.2 15.2-15.2-52.2-52.2c18.5-25.6 16.2-61.5-6.9-84.6zm-13.9 78.8c-17.9 17.9-46.9 17.9-64.8 0s-17.9-46.9 0-64.8 46.9-17.9 64.8 0 17.9 46.9 0 64.8z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconSearch /> DOM element add "id" attribute to DOM element 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}"`;

exports[`<IconSearch /> DOM element add "onClick" attribute to DOM element 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c"
    height="1em"
    id={[Function]}
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M154.4 59.7c-25.6-25.6-67.1-25.6-92.8 0s-25.6 67.1 0 92.8c23 23 58.8 25.3 84.5 7l52.2 52.2 15.2-15.2-52.2-52.2c18.5-25.6 16.2-61.5-6.9-84.6zm-13.9 78.8c-17.9 17.9-46.9 17.9-64.8 0s-17.9-46.9 0-64.8 46.9-17.9 64.8 0 17.9 46.9 0 64.8z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconSearch /> DOM element add "onClick" attribute to DOM element 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}"`;

exports[`<IconSearch /> DOM element pass attributes defined in the "attrs" prop to the DOM element 1`] = `
<div>
  <svg
    aria-hidden={true}
    className="htz-a htz-b htz-c"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M154.4 59.7c-25.6-25.6-67.1-25.6-92.8 0s-25.6 67.1 0 92.8c23 23 58.8 25.3 84.5 7l52.2 52.2 15.2-15.2-52.2-52.2c18.5-25.6 16.2-61.5-6.9-84.6zm-13.9 78.8c-17.9 17.9-46.9 17.9-64.8 0s-17.9-46.9 0-64.8 46.9-17.9 64.8 0 17.9 46.9 0 64.8z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconSearch /> DOM element pass attributes defined in the "attrs" prop to the DOM element 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}"`;

exports[`<IconSearch /> DOM element render correctly when no props are passed 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M154.4 59.7c-25.6-25.6-67.1-25.6-92.8 0s-25.6 67.1 0 92.8c23 23 58.8 25.3 84.5 7l52.2 52.2 15.2-15.2-52.2-52.2c18.5-25.6 16.2-61.5-6.9-84.6zm-13.9 78.8c-17.9 17.9-46.9 17.9-64.8 0s-17.9-46.9 0-64.8 46.9-17.9 64.8 0 17.9 46.9 0 64.8z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconSearch /> DOM element render correctly when no props are passed 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}"`;

exports[`<IconSearch /> styles responsively set misc styles on an icon 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c htz-d htz-e"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M154.4 59.7c-25.6-25.6-67.1-25.6-92.8 0s-25.6 67.1 0 92.8c23 23 58.8 25.3 84.5 7l52.2 52.2 15.2-15.2-52.2-52.2c18.5-25.6 16.2-61.5-6.9-84.6zm-13.9 78.8c-17.9 17.9-46.9 17.9-64.8 0s-17.9-46.9 0-64.8 46.9-17.9 64.8 0 17.9 46.9 0 64.8z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconSearch /> styles responsively set misc styles on an icon 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}@media (max-width: 79.9375em){.htz-d{position:relative}}@media (min-width: 80em){.htz-e{position:static}}"`;

exports[`<IconSearch /> styles set icon's color 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M154.4 59.7c-25.6-25.6-67.1-25.6-92.8 0s-25.6 67.1 0 92.8c23 23 58.8 25.3 84.5 7l52.2 52.2 15.2-15.2-52.2-52.2c18.5-25.6 16.2-61.5-6.9-84.6zm-13.9 78.8c-17.9 17.9-46.9 17.9-64.8 0s-17.9-46.9 0-64.8 46.9-17.9 64.8 0 17.9 46.9 0 64.8z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconSearch /> styles set icon's color 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:#0B7EB5}.htz-c{fill:#FFF}"`;

exports[`<IconSearch /> styles set icon's color responsively 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c htz-d"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M154.4 59.7c-25.6-25.6-67.1-25.6-92.8 0s-25.6 67.1 0 92.8c23 23 58.8 25.3 84.5 7l52.2 52.2 15.2-15.2-52.2-52.2c18.5-25.6 16.2-61.5-6.9-84.6zm-13.9 78.8c-17.9 17.9-46.9 17.9-64.8 0s-17.9-46.9 0-64.8 46.9-17.9 64.8 0 17.9 46.9 0 64.8z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconSearch /> styles set icon's color responsively 2`] = `".htz-a{vertical-align:-0.15em}.htz-d{fill:#FFF}@media (max-width: 79.9375em){.htz-b{color:#0B7EB5}}@media (min-width: 80em){.htz-c{color:#2D2D2D}}"`;

exports[`<IconSearch /> styles set icon's fill 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M154.4 59.7c-25.6-25.6-67.1-25.6-92.8 0s-25.6 67.1 0 92.8c23 23 58.8 25.3 84.5 7l52.2 52.2 15.2-15.2-52.2-52.2c18.5-25.6 16.2-61.5-6.9-84.6zm-13.9 78.8c-17.9 17.9-46.9 17.9-64.8 0s-17.9-46.9 0-64.8 46.9-17.9 64.8 0 17.9 46.9 0 64.8z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconSearch /> styles set icon's fill 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#0B7EB5}"`;

exports[`<IconSearch /> styles set icon's fill responsively 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c htz-d"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M154.4 59.7c-25.6-25.6-67.1-25.6-92.8 0s-25.6 67.1 0 92.8c23 23 58.8 25.3 84.5 7l52.2 52.2 15.2-15.2-52.2-52.2c18.5-25.6 16.2-61.5-6.9-84.6zm-13.9 78.8c-17.9 17.9-46.9 17.9-64.8 0s-17.9-46.9 0-64.8 46.9-17.9 64.8 0 17.9 46.9 0 64.8z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconSearch /> styles set icon's fill responsively 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}@media (max-width: 79.9375em){.htz-c{fill:#0B7EB5}}@media (min-width: 80em){.htz-d{fill:#2D2D2D}}"`;

exports[`<IconSearch /> styles set icon's size 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c htz-d"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M154.4 59.7c-25.6-25.6-67.1-25.6-92.8 0s-25.6 67.1 0 92.8c23 23 58.8 25.3 84.5 7l52.2 52.2 15.2-15.2-52.2-52.2c18.5-25.6 16.2-61.5-6.9-84.6zm-13.9 78.8c-17.9 17.9-46.9 17.9-64.8 0s-17.9-46.9 0-64.8 46.9-17.9 64.8 0 17.9 46.9 0 64.8z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconSearch /> styles set icon's size 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}.htz-d{font-size:6rem}"`;

exports[`<IconSearch /> styles set icon's size responsively 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c htz-d htz-e"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M154.4 59.7c-25.6-25.6-67.1-25.6-92.8 0s-25.6 67.1 0 92.8c23 23 58.8 25.3 84.5 7l52.2 52.2 15.2-15.2-52.2-52.2c18.5-25.6 16.2-61.5-6.9-84.6zm-13.9 78.8c-17.9 17.9-46.9 17.9-64.8 0s-17.9-46.9 0-64.8 46.9-17.9 64.8 0 17.9 46.9 0 64.8z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconSearch /> styles set icon's size responsively 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}@media (max-width: 79.9375em){.htz-d{font-size:6rem}}@media (min-width: 80em){.htz-e{font-size:7rem}}"`;

exports[`<IconSearch /> styles set misc styles on an icon 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c htz-d"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M154.4 59.7c-25.6-25.6-67.1-25.6-92.8 0s-25.6 67.1 0 92.8c23 23 58.8 25.3 84.5 7l52.2 52.2 15.2-15.2-52.2-52.2c18.5-25.6 16.2-61.5-6.9-84.6zm-13.9 78.8c-17.9 17.9-46.9 17.9-64.8 0s-17.9-46.9 0-64.8 46.9-17.9 64.8 0 17.9 46.9 0 64.8z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconSearch /> styles set misc styles on an icon 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}.htz-d{position:relative}"`;
